--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 </head>
 
 <body>
-<h1>FH Toolzine </h1>
+<h2>FH Toolzine </h2>
 <input type="file" name="image" id="image" onchange="readURL(this);"/>
-<h2>Uploaded Photo of Your Zine Page:</h2>
+<!-- <h2>Uploaded Photo of Your Zine Page:</h2> -->
 <div class="image_container" id="cropped_result">
     <!--<img id="blah" src="#" alt="your uploaded image" /> -->
+    <br>
     <img id="blah" src="#" />
-    <h2>Processed Zine:</h2>
+   <!-- <h2>Processed Zine:</h2>-->
 </div>
 <br>
-
+<br>
 <button id="crop_button">Crop</button> 
 <br>
-<button id="grid_button">Grid</button> 
 
 <!--
 <img id="scream" src="img_the_scream.jpg" alt="The Scream" width="220" height="277">
@@ -28,8 +28,34 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 -->
 <br>
 
+<canvas id="cropped" width="220" height="277" style="border:1px solid #d3d3d3;">
+  Your browser does not support the HTML5 canvas tag.</canvas>
+
+  <br>
+<br>
+  <br>
+<button id="grid_button">Grid</button> 
+
+<br>
+<br>
+
 <canvas id="zine_result" width="220" height="277" style="border:1px solid #d3d3d3;">
   Your browser does not support the HTML5 canvas tag.</canvas>
+
+  <br>
+
+  <img id="zero" src="#" ><br><br>
+  <img id="one" src="#" ><br><br>
+  <img id="two" src="#" ><br><br>
+  <img id="three" src="#" ><br><br>
+  <img id="four" src="#" ><br><br>
+  <img id="five" src="#" ><br><br>
+  <img id="six" src="#" ><br><br>
+  <img id="seven" src="#" ><br><br>
+  <img id="eight" src="#" ><br><br>
+  <img id="nine" src="#" ><br><br>
+  
+
 
 <!--
 <div class="puzzle piece1"></div>
@@ -61,11 +87,26 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 
         // On crop button clicked
         document.getElementById('crop_button').addEventListener('click', function(){
-        var imgurl =  cropper.getCroppedCanvas().toDataURL();
-        var img = document.createElement("img");
-        img.src = imgurl;
-        img.id = "bob";
-        document.getElementById("cropped_result").appendChild(img);
+          var c = document.getElementById("cropped");
+          var ctx = c.getContext("2d");
+          var croppedCanvas = cropper.getCroppedCanvas();
+
+          // next step -- create new canvas element with these dimensions ..
+          var cropped_width = croppedCanvas.width;
+          var cropped_height = croppedCanvas.height;
+
+          console.log("cropped dim:");
+          console.log(cropped_width,cropped_height);
+
+          var imgurl =  croppedCanvas.toDataURL();
+          var img = document.createElement("img");
+          img.src = imgurl;
+          img.id = "joe";
+          ctx.drawImage(img, 0, 0);
+          console.log('yeah');
+
+          
+          //document.getElementById("cropped_result").appendChild(img);
         
             /* ---------------- SEND IMAGE TO THE SERVER-------------------------
 
@@ -94,11 +135,86 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 <script>
 
   document.getElementById('grid_button').addEventListener('click', function(){
-  var c = document.getElementById("zine_result");
-  var ctx = c.getContext("2d");
-  var img2 = document.getElementById("bob");
-  ctx.drawImage(img2, 0, 0);
-  console.log('yeah');
+    var c = document.getElementById("cropped");
+    var ctx = c.getContext("2d");
+    //var img = document.getElementById("scream");
+    //ctx.drawImage(img, 0, 0);
+    var imgData = ctx.getImageData(0, 0, c.width, c.height);
+
+
+    // invert colors
+    var i;
+    for (i = 0; i < imgData.data.length; i += 4) {
+      imgData.data[i] = 255 - imgData.data[i];
+      imgData.data[i+1] = 255 - imgData.data[i+1];
+      imgData.data[i+2] = 255 - imgData.data[i+2];
+      imgData.data[i+3] = 255;
+    }
+    ctx.putImageData(imgData, 0, 0);
+
+    console.log("canvas dim:");
+    console.log(c.width,c.height);
+
+    //var canvas = document.getElementById('example'),
+    var dataUrl = c.toDataURL();
+    var image = document.createElement('img');
+    image.src = dataUrl;
+    //document.getElementById("cropped_result").appendChild(image);
+
+    // split into pieces
+    var numColsToCut = 4;
+    var numRowsToCut = 4;
+    var widthOfOnePiece = c.width/numColsToCut;
+    var heightOfOnePiece = c.height/numRowsToCut;
+
+    var imagePieces = [];
+    for(var x = 0; x < numColsToCut; ++x) {
+        for(var y = 0; y < numRowsToCut; ++y) {
+            var canvas = document.createElement('canvas');
+            canvas.width = widthOfOnePiece;
+            canvas.height = heightOfOnePiece;
+            var context = canvas.getContext('2d');
+            context.drawImage(image, x * widthOfOnePiece, y * heightOfOnePiece, widthOfOnePiece, heightOfOnePiece, 0, 0, canvas.width, canvas.height);
+            imagePieces.push(canvas.toDataURL());
+        }
+    }
+
+    // imagePieces now contains data urls of all the pieces of the image
+
+    // load one piece onto the page
+    var anImageElement = document.getElementById('zero');
+    anImageElement.src = imagePieces[0];
+
+    var anImageElement = document.getElementById('one');
+    anImageElement.src = imagePieces[1];
+
+    var anImageElement = document.getElementById('two');
+    anImageElement.src = imagePieces[2];
+
+    var anImageElement = document.getElementById('three');
+    anImageElement.src = imagePieces[3];
+
+    var anImageElement = document.getElementById('four');
+    anImageElement.src = imagePieces[4];
+
+    var anImageElement = document.getElementById('five');
+    anImageElement.src = imagePieces[5];
+
+    var anImageElement = document.getElementById('six');
+    anImageElement.src = imagePieces[6];
+
+    var anImageElement = document.getElementById('seven');
+    anImageElement.src = imagePieces[7];
+
+    var anImageElement = document.getElementById('eight');
+    anImageElement.src = imagePieces[8];
+
+    var anImageElement = document.getElementById('nine');
+    anImageElement.src = imagePieces[9];
+
+
+
+
   });
 
 </script>
