more basic functionality

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
 <h1>FarmHack ToolZine Uploader</h1>
 
-<p>
+<p style="font-size:large">
 If you make a 'tool zine' using 8.5x11'' paper using the below format, you can then upload a photo of your zine to this site, and process it into an HTML-based tutorial!
 </p>
 
-<img src="assets/folding.png" width=400px">
+<img src="assets/folding.png" width=500px">
 &nbsp &nbsp
 &nbsp
 &nbsp
 
-<img src="assets/template.jpg" width=533px"><br><br>
+<img src="assets/template.jpg" width=700px"><br><br>
 
 <h1>1. Upload a photo of your zine (landscape-oriented):</h1>
 <input type="file" name="image" id="image" onchange="readURL(this);"/>
