--- a/letter.html
+++ b/letter.html
@@ -17,7 +17,7 @@
 <h1>FarmHack ToolZine Uploader (letter)</h1>
 
 <p class="displaying" id="pdftest">
-If you've already made a paper-based 'tool zine' using 8.5x11'' paper (using the format shown below), you can upload a photo of your zine to this site, and process it into an web-based tutorial!
+If you've already made a paper-based 'tool zine' using 8.5x11'' paper (in the format shown below), you can upload a photo of your zine to this site, and process it into an web-based tutorial!
 </p>
 
 
